# commerce_agent

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  project_plan.md
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agent/: __init__.py  errors.py  memory.py  prompts.py  provider.py  runtime.py  types.py
backend/app/api/: __init__.py  agent.py  commerce.py  dependencies.py
backend/app/commerce/: __init__.py  context.py  errors.py  seed.py  services.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  commerce.py
backend/app/schemas/: agent.py  commerce.py
backend/app/tools/: __init__.py  context.py  read_tools.py  registry.py
backend/migrations/: env.py
backend/migrations/versions/: 20260712_0001_commerce_sandbox.py  20260713_0002_agent_conversations.py
backend/tests/: conftest.py  test_agent_api.py  test_agent_runtime.py  test_agent_tools.py  test_commerce_api.py  test_commerce_services.py  test_health.py  test_seed.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
